<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".GameMenuActivity">

    <Button
        android:id="@+id/btn_lvl1"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/btn_lvl1_text"
        android:onClick="goToLevel1"/>


    <Button
        android:id="@+id/btn_lvl2"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/btn_lvl2_text"
        android:onClick="goToLevel2" />

    <Button
        android:id="@+id/btn_lvl3"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/btn_lvl3_text"
        android:onClick="goToLevel3" />

</LinearLayout>
