<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/gamechoicebackground"
    tools:context=".Level2Activity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="20dip"
            android:layout_height="190dip"></LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <ImageButton
                android:id="@+id/btn_lvl2_placeValue"
                android:layout_height="190dip"
                android:layout_width="170dip"
                android:text="@string/btn_lvl1_QA_text"
                android:onClick="goToLevel2PlaceValue"
                android:background="@drawable/level2_sign1"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="0.3"></LinearLayout>

            <ImageButton
                android:id="@+id/btn_lvl2_ordering"
                android:layout_height="190dip"
                android:layout_width="170dip"
                android:text="@string/btn_lvl2_ordering_text"
                android:onClick="goToLevel2Ordering"
                android:background="@drawable/level2_sign2"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="0.3"></LinearLayout>

            <ImageButton
                android:id="@+id/btn_lvl2_fillInTheBlanks"
                android:layout_height="190dip"
                android:layout_width="170dip"
                android:text="@string/btn_lvl2_fillInTheBlanks_text"
                android:onClick="goToLevel2FillInTheBlanks"
                android:background="@drawable/level2_sign3"/>


        </LinearLayout>
    </LinearLayout>
</LinearLayout>
